--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,10 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
   },
-  "editor.wordWrap": "on"
+  "editor.wordWrap": "on",
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#312F0F",
+    "titleBar.activeBackground": "#454115",
+    "titleBar.activeForeground": "#FBFAF1"
+  }
 }
