--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "deploy": "vercel --prod"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
     "@tabler/icons-react": "^3.1.0",
@@ -26,6 +28,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-lottie": "^1.2.4",
+    "shadcn": "^2.1.8",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.163.0",
